migrate auth_ldap, and avoir error when a column is "user"

--- a/anygrate/mappings/openerp6.1-openerp7.0.yml
+++ b/anygrate/mappings/openerp6.1-openerp7.0.yml
@@ -144,6 +144,9 @@ base:
     res_partner_category_rel.*:
     res_groups_implied_rel.*:
 
+auth_ldap:
+    res_company_ldap.*:
+
 procurement:
     procurement_order.*:
 
