don't merge fiscalyear

--- a/anygrate/mappings/openerp6.1-openerp7.0.yml
+++ b/anygrate/mappings/openerp6.1-openerp7.0.yml
@@ -178,6 +178,7 @@ account:
     account_fiscalyear.*:
     account_fiscalyear.__discriminator__:
         - code
+        - company_id
     account_financial_report.*:
     account_account_financial_report.*:
     account_fiscal_position.*:
