--- a/anygrate/mappings/openerp6.1-openerp7.0.yml
+++ b/anygrate/mappings/openerp6.1-openerp7.0.yml
@@ -82,7 +82,7 @@ base:
     res_users.context_tz:
         res_partner.tz:
     res_partner._:
-        res_partner.is_company: return False
+        res_partner.is_company: return True if source_row['supplier'] == 't' or source_row['website'] else False
         res_partner.notification_email_send: return 'comment'
 
     # addresses
