--- a/anygrate/mappings/openerp6.1-openerp7.0.yml
+++ b/anygrate/mappings/openerp6.1-openerp7.0.yml
@@ -165,7 +165,7 @@ base:
             return self.fk_mapping.get(table, {}).get(res_id, res_id)
 
     wkf_workitem.*:
-    wkf_workitem.act_id:    
+    wkf_workitem.act_id:
         wkf_workitem.act_id: |
             self.fk_mapping.setdefault('wkf_activity', {})
             act_id = source_row['act_id']
@@ -176,14 +176,14 @@ base:
                 if not self.fk_mapping['wkf_activity'][act_id]:
                     raise UserWarning('Could not migrate workflow workitem: %s' % source_row)
             return self.fk_mapping['wkf_activity'][act_id]
-    
+
     wkf_triggers.*:
     wkf_triggers.uid.res_id:
         wkf_triggers.uid.res_id: |
             table = source_row['model'].replace('.', '_')
             res_id = source_row['res_id']
             return self.fk_mapping.get(table, {}).get(res_id, res_id)
-        
+
 
 auth_ldap:
     res_company_ldap.*:
@@ -505,6 +505,7 @@ crm:
     crm_lead.optin: __forget__
     crm_lead.optout:
         crm_lead.opt_out:
+    crm_lead.partner_id: __forget__
     crm_lead.partner_address_id:
         crm_lead.partner_id: __fk__ res_partner_address
 
@@ -615,6 +616,7 @@ product:
 
 purchase:
     purchase_order.*:
+    purchase_order.partner_id: __forget__
     purchase_order.partner_address_id:
         purchase_order.partner_id: __fk__ res_partner_address
     purchase_order_line.*:
